--- a/VidyaCat2.MVC/Views/Developer/IndexByType.cshtml
+++ b/VidyaCat2.MVC/Views/Developer/IndexByType.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<VidyaCat2.Models.DeveloperListItem>
 
 @{
-    ViewBag.Title = "IndexByType";
+    ViewBag.Title = "Developers - Type";
 }
 
-<h2>IndexByType</h2>
+<h2 class="pageHeader">Developers by Type</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create", "", new { @class = "createButton" })
 </p>
 <table class="table">
     <tr>
@@ -41,9 +41,9 @@
             @Html.ActionLink($"{item.Status}", "IndexByStatus", "Developer", new { status = item.IsActive }, htmlAttributes: new { @class = "indexLink" })
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.DeveloperID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.DeveloperID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.DeveloperID })
+            @Html.ActionLink("Edit", "Edit", new { id = item.DeveloperID }, htmlAttributes: new { @class = "eddLinks" }) |
+            @Html.ActionLink("Details", "Details", new { id=item.DeveloperID }, htmlAttributes: new { @class = "eddLinks" }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.DeveloperID }, htmlAttributes: new { @class = "eddLinks" })
         </td>
     </tr>
 }
