--- a/VidyaCat2.MVC/Views/Home/Index.cshtml
+++ b/VidyaCat2.MVC/Views/Home/Index.cshtml
@@ -7,50 +7,56 @@
     <p>VidyaCat is the best place for gamers to show off their collections!</p>
 </div>
 
-<h1>New Releases</h1>
+<h1 class="sectionHeader">New Releases</h1>
 <br />
 <div class="row">
     <div class="col-md-4">
-        <h2>PlayStation</h2>
+        <h2 class = "consoleTitle">PlayStation</h2>
         <a href="https://www.metacritic.com/game/playstation-4/nier-replicant-ver122474487139" title="NieR: Replicant for PlayStation 4 on MetaCritic" target="_blank"><img src="~/Assets/nierReplicant.jpg" alt="Box art for NieR: Replicant" title="NieR: Replicant" /></a>
+
         <a href="https://www.metacritic.com/game/playstation-5/oddworld-soulstorm" title="Oddworld: Soulstorm for PlayStation 5 on MetaCritic" target="_blank"><img src="~/Assets/oddworldSoulstorm.jpg" alt="Box art for Oddworld: Soulstorm" title="Oddworld: Soulstorm" /></a>
+
         <a href="https://www.metacritic.com/game/playstation-5/tony-hawks-pro-skater-1-+-2" title="Tony Hawk's Pro Skater 1 + 2 for PlayStation 5 on MetaCritic" target="_blank"><img src="~/Assets/thps1_2.jpg" alt="Box art for Tony Hawk's Pro Skater 1 + 2" title="Tony Hawk's Pro Skater 1 + 2" /></a>
     </div>
     <div class="col-md-4">
-        <h2>Switch</h2>
+        <h2 class = "consoleTitle">Switch</h2>
         <a href="https://www.metacritic.com/game/switch/saga-frontier-remastered" title="SaGa Frontier Remastered for Switch on MetaCritic" target="_blank"><img src="~/Assets/sagaFrontier.jpg" alt="Box art for SaGa Frontier Remastered" title="SaGa Frontier Remastered" /></a>
+
         <a href="https://www.metacritic.com/game/switch/there-is-no-game-wrong-dimension" title="There Is No Game: Wrong Dimension for Switch on MetaCritic" target="_blank"><img src="~/Assets/thereIsNoGame.jpg" alt="Box art for There Is No Game: Wrong Dimension" title="There Is No Game: Wrong Dimension" /></a>
+
         <a href="https://www.metacritic.com/game/switch/the-house-in-fata-morgana---dreams-of-the-revenants-edition--" title="The House In Fata Morgana: Dreams Of The Revenants Edition for Switch on MetaCritic" target="_blank"><img src="~/Assets/fataMorgana.jpg" alt="Box art for The House In Fata Morgana: Dreams Of The Revenants Edition" title="The House In Fata Morgana: Dreams Of The Revenants Edition" /></a>
     </div>
     <div class="col-md-4">
-        <h2>Xbox</h2>
+        <h2 class = "consoleTitle">Xbox</h2>
         <a href="https://www.metacritic.com/game/xbox-series-x/judgment" title="Judgment for Xbox Series X on MetaCritic" target="_blank"><img src="~/Assets/judgment.jpg" alt="Box art for Judgment" title="Judgment" /></a>
+
         <a href="https://www.metacritic.com/game/xbox-series-x/motogp-21" title="MotoGP 21 for Xbox Series X on MetaCritic" target="_blank"><img src="~/Assets/motoGP21.jpg" alt="Box art for MotoGP 21" title="MotoGP 21" /></a>
+
         <a href="https://www.metacritic.com/game/xbox-series-x/mlb-the-show-21" title="MLB The Show 21 for Xbox Series X on MetaCritic" target="_blank"><img src="~/Assets/theShow21.jpg" alt="Box art for MLB The Show 21" title="MLB The Show 21" /></a>
     </div>
 </div>
 
 <hr />
-<h1>Blog Posts</h1>
+<h1 class="sectionHeader">Blog Posts</h1>
 <br />
 <div class="row">
     <div class="col-md-4">
-        <h2>What COVID-19 Means For The Retro Game Market</h2>
-        <h4>By VidyaCat HQ</h4>
+        <h2 class="blogTitle">What COVID-19 Means For The Retro Game Market</h2>
+        <h4 class="byline">By VidyaCat HQ</h4>
         <p class="blurb">
             We all know how much the pandemic has affected the economy overall, especially restaurants and small businesses. But what about the used/retro game market? While arguably less important than the aforementioned industries, COVID-19 has certainly turned the retro game scene into a seller's market. With people spending more time at home than ever, they're bound to get bored. What better to do than to play your favorite video games from your childhood?! This mentality has seen prices for older games and consoles skyrocket as stock becomes less and less available.
         </p>
     </div>
     <div class="col-md-4">
-        <h2>A Beginner's Guide to Collecting Video Games</h2>
-        <h4>By VidyaCat HQ</h4>
+        <h2 class="blogTitle">A Beginner's Guide to Collecting Video Games</h2>
+        <h4 class="byline">By VidyaCat HQ</h4>
         <p class="blurb">
             So you want to start collecting video games? Awesome! Here's a helpful guide to get you started. The first thing you'll want to figure out is what kind of games you're into. If you aren't very familiar with video games in general, it's best to start with something casual to learn the ropes before diving into an 80-hour JRPG that will cause you severe existential dread... Anyway, it's hard to go wrong with classic games like Super Mario Bros. or Crash Bandicoot. They'll warm you up to the coordination and timing required for many games, but can also offer a fair challenge in their later levels.
         </p>
     </div>
     <div class="col-md-4">
-        <h2>Never Trust The Disembodied Voice</h2>
-        <h4>By VidyaCat HQ</h4>
+        <h2 class="blogTitle">Never Trust The Disembodied Voice</h2>
+        <h4 class="byline">By VidyaCat HQ</h4>
         <p class="blurb">
             Just like movies, video games have their tropes that can seem almost inescapable at times. If you've seen enough horror movies, you can probably guess who lives and dies within the first 15 minutes of most of them. If you're a rom-com fan, you know that the guy and girl who have completely different lives will end up together. And, unfortunately, if you like story-based games, you probably know by now that the mysterious voice who talks to you at the beginning of the game and guides you through the early levels is almost sure to be the final boss of the game, after the owner of the voice turns on you.
         </p>
