--- a/VidyaCat2.MVC/Views/Developer/Create.cshtml
+++ b/VidyaCat2.MVC/Views/Developer/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model VidyaCat2.Models.DeveloperCreate
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Developer";
 }
 
-<h2>Create</h2>
+<h2 class="pageHeader">Developers</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>DeveloperCreate</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -53,14 +52,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="createButton" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", "", htmlAttributes: new { @class = "bottomLinks" })
 </div>
 
 @section Scripts {
