--- a/VidyaCat2.MVC/Views/Developer/Delete.cshtml
+++ b/VidyaCat2.MVC/Views/Developer/Delete.cshtml
@@ -1,14 +1,13 @@
 ﻿@model VidyaCat2.Models.DeveloperDetail
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Developer";
 }
 
-<h2>Delete</h2>
+<h2 class="pageHeader">Delete Developer</h2>
 
-<h3>Are you sure you want to delete this developer?</h3>
+<h3 class="confirmation">Are you sure you want to delete this developer?</h3>
 <div>
-    <h4>DeveloperDetail</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -28,19 +27,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.IsMajor)
+            @Html.DisplayNameFor(model => model.Type)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.IsMajor)
+            @Html.DisplayFor(model => model.Type)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.IsActive)
+            @Html.DisplayNameFor(model => model.Status)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.IsActive)
+            @Html.DisplayFor(model => model.Status)
         </dd>
 
         <dt>
@@ -57,8 +56,10 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="deleteButton" /> 
+            <br />
+            <br />
+            @Html.ActionLink("Back to List", "Index", "", htmlAttributes: new { @class = "bottomLinks" })
         </div>
     }
 </div>
