--- a/VidyaCat2.MVC/Views/Developer/Details.cshtml
+++ b/VidyaCat2.MVC/Views/Developer/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model VidyaCat2.Models.DeveloperDetail
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Developer - Info";
 }
 
-<h2>Details</h2>
+<h2 class="pageHeader">Developer Info</h2>
 
 <div>
-    <h4>DeveloperDetail</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -53,6 +52,8 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.DeveloperID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit", "Edit", new { id = Model.DeveloperID }, htmlAttributes: new { @class = "editButton" }) 
+    <br />
+    <br />
+    @Html.ActionLink("Back to List", "Index", "", htmlAttributes: new { @class = "bottomLinks" })
 </p>
