--- a/VidyaCat2.MVC/Views/Game/Delete.cshtml
+++ b/VidyaCat2.MVC/Views/Game/Delete.cshtml
@@ -1,14 +1,13 @@
 ﻿@model VidyaCat2.Models.GameDetail
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Game - Delete";
 }
 
-<h2>Delete</h2>
+<h2 class="pageHeader">Delete Game</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="confirmation">Are you sure you want to delete this?</h3>
 <div>
-    <h4>GameDetail</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -89,8 +88,9 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="deleteButton" />
+            <br /><br />
+            @Html.ActionLink("Back to List", "Index", "", htmlAttributes: new { @class = "bottomLinks" })
         </div>
     }
 </div>
