--- a/VidyaCat2.MVC/Views/Game/Details.cshtml
+++ b/VidyaCat2.MVC/Views/Game/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model VidyaCat2.Models.GameDetail
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Game - Details";
 }
 
-<h2>Details</h2>
+<h2 class="pageHeader">Game Info</h2>
 
 <div>
-    <h4>GameDetail</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -85,6 +84,7 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.GameID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit", "Edit", new { id = Model.GameID }, htmlAttributes: new { @class = "editButton" })
+    <br /><br />
+    @Html.ActionLink("Back to List", "Index", "", htmlAttributes: new { @class = "bottomLinks" })
 </p>
