--- a/VidyaCat2.MVC/Views/Platform/Edit.cshtml
+++ b/VidyaCat2.MVC/Views/Platform/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model VidyaCat2.Models.PlatformEdit
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Platform - Edit";
 }
 
-<h2>Edit</h2>
+<h2 class="pageHeader">Edit Platform Info</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>PlatformEdit</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.PlatformID)
@@ -43,14 +42,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="createButton" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", "", htmlAttributes: new { @class = "bottomLinks" })
 </div>
 
 @section Scripts {
