--- a/VidyaCat2.MVC/Views/Platform/Index.cshtml
+++ b/VidyaCat2.MVC/Views/Platform/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<VidyaCat2.Models.PlatformListItem>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Platforms";
 }
 
-<h2>Index</h2>
+<h2 class="pageHeader">Platforms</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create", "", htmlAttributes: new { @class = "createButton" })
 </p>
 <table class="table">
     <tr>
@@ -41,9 +41,9 @@
             @Html.ActionLink($"{item.Status}", "IndexByStatus", "Platform", new { status = item.IsCurrent }, htmlAttributes: new { @class = "indexLink" })
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.PlatformID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.PlatformID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.PlatformID })
+            @Html.ActionLink("Edit", "Edit", new { id=item.PlatformID }, htmlAttributes: new { @class = "eddLinks" }) |
+            @Html.ActionLink("Details", "Details", new { id=item.PlatformID }, htmlAttributes: new { @class = "eddLinks" }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.PlatformID }, htmlAttributes: new { @class = "eddLinks" })
         </td>
     </tr>
 }
